login design and overlap issue solved

--- a/src/components/companyname/companyname.css
+++ b/src/components/companyname/companyname.css
@@ -149,7 +149,6 @@
         display: flex;
         margin-top: -25px;
         width: 100%;
-        position: relative;
     }
     
     .servicewisesub p {
