--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -7,7 +7,7 @@
         height: 100vh;
     }
     .seconddiv {
-        background-color: #232323;
+        background-color: rgb(47, 47, 47);
         padding: 10px;
         padding-top: 50px;
         margin-top: 100px;
@@ -197,16 +197,17 @@ label {
 
 .input {
     font-size: 14px;
-    background-color: #000000;
     align-items: center;
     padding: 15px 0px;
     padding-left: 15px;
-    color: white;
     border-radius: 5px;
     width: 95%;
     margin-top: 10px;
     margin-bottom: 10px;
     border: none;
+    background-color: rgb(64, 64, 64);
+    color: rgb(255, 255, 255);
+    box-shadow: rgba(255, 255, 255, 0.08) 0px 0px 11px 0px;
 }
 
 .second {
@@ -271,16 +272,17 @@ label {
 .input1 {
     padding-right: 30px;
     font-size: 14px;
-    background-color: #000000;
     align-items: center;
     padding: 15px 0px;
     padding-left: 15px;
-    color: white;
     border-radius: 5px;
     width: 95%;
     margin-top: 10px;
     margin-bottom: 10px;
     border: none;
+    background-color: rgb(64, 64, 64);
+    color: rgb(255, 255, 255);
+    box-shadow: rgba(255, 255, 255, 0.08) 0px 0px 11px 0px;
 }
 
 .eye-icon {
